--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="hero">
         <div class="contenedor-hero">
-            <h2 class="margenTitulo">Jose Bustos </h2>
+            <h2 class="margenTitulo">José Luis Bustos Díaz </h2>
             <h2><span class="tagline"></span></h2>
             <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffec00" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
